Adds Font file and info.plist to access custom fonts

--- a/fourCorners/Info.plist
+++ b/fourCorners/Info.plist
@@ -34,6 +34,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SignPainter HouseScript Regular.ttf</string>
+		<string>SignPainter HouseSlant Regular.ttf</string>
+		<string>SignPainter HouseBrush Regular.ttf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
